# fast-fill

./: .gitignore  DEMO.md  DEPLOYMENTS.md  README.md  foundry.toml
demo/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
demo/docs/: order-watcher-design.md
demo/scripts/: gen-abis.ts  live-cctp-smoke.ts  parity-check.ts  pricing-check.ts  setup-approvals.ts
docs/: ARCHITECTURE.md  GAS.md  GATEWAY.md  HOOKS.md  PRICING.md
relayer/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
relayer/bindings/: Cargo.toml
relayer/bindings/src/: cctp_adapter.rs  cctp_executor.rs  fast_fill_config.rs  lib.rs  oft_adapter.rs  oft_adapter_factory.rs
relayer/bot/: Cargo.toml
relayer/bot/src/: app.rs  cctp.rs  chains.rs  config.rs  fill.rs  main.rs  orchestrator.rs  order.rs  price.rs  registry.rs  sol.rs  store.rs  verify.rs  watcher.rs
relayer/scripts/: README.md  check-funding.sh  initiate-cctp.sh  lib.sh  live-test.sh  watch-order.sh
script/: DeployCctpAdapter.s.sol  DeployCctpExecutor.s.sol  DeployFastFillConfig.s.sol  DeployHooks.s.sol  DeployOftAdapter.s.sol  DeployOftAdapterFactory.s.sol
script/config/: Addresses.sol
src/: CallbackExecutor.sol  CctpExecutor.sol  FastFillBase.sol
src/adapters/: CctpAdapter.sol  OftAdapter.sol  OftAdapterFactory.sol
src/config/: FastFillConfig.sol
src/hooks/: AaveDepositHook.sol  BaseFastFillHook.sol  IntentExecutorHook.sol  UniswapSwapHook.sol
src/interfaces/: ICallbackExecutor.sol  ICctpExecReceiver.sol  IERC20Permit.sol  IFastFill.sol  (+2 more)
(+143 files in other folders)
