[package]
name = "fastfill-relayer"
version = "0.1.0"
edition = "2021"
description = "Autonomous fast-fill relayer bot (alloy) — watches OrderCreated, fills + settles CCTP/OFT orders."

[[bin]]
name = "fastfill-relayer"
path = "src/main.rs"

[dependencies]
fastfill-bindings = { path = "../bindings" }
alloy = { version = "1.0", features = ["full", "signer-local"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
dotenvy = "0.15"
